--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do site</title>
+    <title>Olá, mundo!</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Olá, mundo!</h1>
          <header>
          <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Exemplo 1</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam illum aut fugit quod obcaecati? Ducimus ratione fugit, facere fuga optio praesentium dicta incidunt odio doloremque recusandae aut, voluptatibus harum consequuntur.</p>
         <article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>Exemplo 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod qui distinctio nam beatae excepturi sapiente voluptatem alias facere minima deleniti? Incidunt dolores modi laborum, dolor illum alias impedit iste illo?</p>
         <article>
     </main>   
 </body>
