--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            <h1>Olá, mundo!</h1>
+            <h1>Site teste</h1>
          <header>
          <article>
             <h2>Exemplo 1</h2>
